# arcane

./: .cmake-format.yaml  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt  app_config.cpp  app_config.hpp  application.cpp  application.hpp  frame.hpp  main.cpp  os.h  peripherals.hpp  renderer.cpp  renderer.hpp  vulkan_config.cpp  vulkan_config.hpp  window.hpp  window_config.cpp  window_config.hpp  window_glfw.cpp
src/cameras/: CMakeLists.txt  camera.cpp  camera.hpp  transform.cpp  transform.hpp
src/common/: CMakeLists.txt  samplers.hpp
src/common/shaders/: pipeline_functions.cpp  pipeline_functions.hpp
src/lightings/: CMakeLists.txt  systems.hpp
src/lightings/shaders/: draw_point_light.frag  draw_point_light.vert  draw_point_light_pipeline.hpp
src/objects/: CMakeLists.txt  game_object.cpp  game_object.hpp  systems.hpp
src/objects/shaders/: draw_object.frag  draw_object.vert  draw_object_pipeline.cpp  draw_object_pipeline.hpp
src/primitive_graphics/: CMakeLists.txt  mesh.cpp  mesh.hpp  primitives.hpp  systems.cpp  systems.hpp
src/primitive_graphics/shaders/: draw_mesh.frag  draw_mesh.vert  draw_mesh_pipeline.cpp  draw_mesh_pipeline.hpp
src/render/: CMakeLists.txt  common.hpp
src/render/passes/: common.hpp  deferred_shading.hpp  gbuffer.cpp  gbuffer.hpp  lighting.hpp  wireframe.hpp
src/scene/: CMakeLists.txt  scene.cpp  scene.hpp  viewpoint.cpp  viewpoint.hpp
src/util/: CMakeLists.txt  filesystem_helpers.hpp  pretty_json.cpp  pretty_json.hpp
src/util/shaders/: debug_printf.glsl
src/vulkan/: CMakeLists.txt  config.cpp  config.hpp  debug_utils.cpp  debug_utils.hpp  device.cpp  device.hpp  device_memory.cpp  device_memory.hpp  image_barriers.hpp  instance.cpp  instance.hpp  swapchain.cpp  swapchain.hpp  vma_wrapper.cpp  vma_wrapper.hpp
